--- a/cuteTime.min.test.html
+++ b/cuteTime.min.test.html
@@ -1,6 +1,6 @@
 <html>  
 	<head>  
-	<title>Cute Time Plugin Test</title>  
+	<title>CuteTime Plugin Demo</title>  
 
 	<script src="js/jquery-1.3.2.js" type="text/javascript"></script>  
 	<script src="js/jquery.cuteTime.min.js" type="text/javascript"></script>  
@@ -23,6 +23,8 @@
 </head>  
 
 <body>  
+	<a href="http://tpgblog.com/cutetime">return to CuteTime HomePage >>></a>
+	<br><br>
 	<div class="timestamp">  
 		2009/10/12 22:11:19
 	</div>
