--- a/cuteTime.test.html
+++ b/cuteTime.test.html
@@ -1,6 +1,6 @@
 <html>  
 	<head>  
-	<title>Cute Time Plugin Test</title>  
+	<title>CuteTime Plugin Demo</title>  
 
 	<script src="js/jquery-1.3.2.js" type="text/javascript"></script>  
 	<script src="js/jquery.cuteTime.js" type="text/javascript"></script>  
@@ -17,12 +17,14 @@
 			// returns a cuter string of the passed in datetime
 			$('.predetermined').text(" -> "+$.cuteTime('2009/10/16 22:11:19'));
 
-			my_cutetime = $('.timestamp_move').cuteTime({ refresh: 60000*10 });
+			my_cutetime = $('.timestamp_move').cuteTime({ refresh: 10000 });
 		});  
 	</script>  
 </head>  
 
 <body>  
+	<a href="http://tpgblog.com/cutetime">return to CuteTime HomePage >>></a>
+	<br><br>
 	<div class="timestamp">  
 		2009/10/12 22:11:19
 	</div>
