--- a/cuteTime.test.html
+++ b/cuteTime.test.html
@@ -8,8 +8,6 @@
 
 	<script type="text/javascript">  
 		$(document).ready(function () {
-			//alert('CLICK OK');
-
 			// both lines assign cuteTime controller to all 'timetamp' class objectes
 
 			$('.timestamp').cuteTime();
@@ -35,16 +33,16 @@
 		2018/11/01 07:11:00
 	</div>
 	<div class="timestamp"></div>
-	<div class="timestamp" cutetime="1980/10/12 22:11:19">  
+	<div class="timestamp" data-timestamp="1980/10/12 22:11:19">  
 		2009/10/12 22:11:19
 	</div>
-	<div class="timestamp" cutetime="asd">  
+	<div class="timestamp" data-timestamp="asd">  
 		10/12/2009 22:11:19
 	</div>
-	<div class="timestamp" cutetime="asd">
+	<div class="timestamp" data-timestamp="asd">
 		aoisd
 	</div>
-	<div class="timestamp" cutetime="asd"></div>
+	<div class="timestamp" data-timestamp="asd"></div>
 
 	<div class='predetermined'></div>
 
@@ -67,16 +65,16 @@
 	</div>
 	<div class="timestamp_move"></div>
 
-	<div class="timestamp_move" cutetime="1980 10 12 22:11:19">  
+	<div class="timestamp_move" data-timestamp="1980 10 12 22:11:19">  
 		2009/10/12 22:11:19
 	</div>
-	<div class="timestamp_move" cutetime="asd">  
+	<div class="timestamp_move" data-timestamp="asd">  
 		2009/10/12 22:11:19
 	</div>
-	<div class="timestamp_move" cutetime="asd">  
+	<div class="timestamp_move" data-timestamp="asd">  
 		aoisd
 	</div>
-	<div class="timestamp_move" cutetime="asd"></div>
+	<div class="timestamp_move" data-timestamp="asd"></div>
 
 
 
