--- a/cutetime.demo.html
+++ b/cutetime.demo.html
@@ -1,14 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<title>CuteTime Plugin Demo</title>
+
 	</head>
 	
+	
 	<frameset cols='50%, 50%'>
-		<frame src='./cuteTime.en.demo.html'>
-		<frame src='./cuteTime.fr.demo.html'>
+		<frame src='./cutetime.en.demo.html'>
+		<frame src='./cutetime.fr.demo.html'>
 	</frameset>
-
-	</body>
+	
 </html>
